# FFmpeg_learn

./: .gitignore  README.md
FFmpegAndroidLearn/: settings.gradle
FFmpegAndroidLearn/app/: build.gradle
FFmpegAndroidLearn/app/src/main/: AndroidManifest.xml
FFmpegAndroidLearn/app/src/main/cpp/: CMakeLists.txt  log_helper.h  native-lib.cpp  simple_audio_player.cpp  simple_audio_player.h
FFmpegAndroidLearn/app/src/main/cpp/include/: x264_config.h
FFmpegAndroidLearn/app/src/main/java/com/aire/ffmpegLearn/: MainActivity.java  NdkHelper.java
FFmpegAndroidLearn/app/src/main/java/com/aire/ffmpegLearn/child/: SimpleAudioPlayerActivity.java  SimpleRecordActivity.java
FFmpegAndroidLearn/app/src/main/java/com/aire/ffmpegLearn/media/: SimpleAudioPlayer.java
FFmpegAndroidLearn/app/src/main/java/com/easypermission/: EasyPermission.java
FFmpegAndroidLearn/app/src/main/res/layout/: activity_main.xml  activity_simple_audio_player.xml  activity_simple_record.xml
FFmpegAndroidLearn/app/src/main/res/values/: strings.xml  themes.xml
FFmpegAndroidLearn/app/src/main/res/values-night/: themes.xml
FFmpegAndroidLearn/gradle/wrapper/: gradle-wrapper.properties
JniLearn/: settings.gradle
JniLearn/app/: build.gradle
JniLearn/app/src/androidTest/java/com/aire/jnilearn/: ExampleInstrumentedTest.java
JniLearn/app/src/main/: AndroidManifest.xml
JniLearn/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JniLearn/app/src/main/java/com/aire/jnilearn/: MainActivity.java  NdkHelper.java
JniLearn/app/src/main/res/values/: strings.xml  themes.xml
JniLearn/app/src/main/res/values-night/: themes.xml
JniLearn/app/src/test/java/com/aire/jnilearn/: ExampleUnitTest.java
JniLearn/gradle/wrapper/: gradle-wrapper.properties
ffmpeg_build_script/: build_ffmpeg_android1.sh  build_ffmpeg_android2.sh  build_ffmpeg_android3.sh  build_x264.sh
shared_build_demo/: CMakeLists.txt  demo.cpp  demo.h  main.cpp  output_log.h
shared_build_demo/build_local_mac/include/libavutil/: ffversion.h
shared_build_demo/build_local_mac/lib/: libavcodec.dylib  libavdevice.59.8.101.dylib  libavfilter.8.46.101.dylib  libavfilter.dylib  libavformat.59.29.100.dylib  libavformat.dylib  libavutil.57.32.101.dylib  libavutil.57.dylib  libswresample.4.8.100.dylib  libswresample.4.dylib  libswscale.6.8.101.dylib  libswscale.dylib
shared_build_demo/build_local_mac/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
shared_build_demo/build_local_mac/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffplay.1  myffplay.1
static_build_demo/: CMakeLists---1.txt  CMakeLists---2.txt  CMakeLists.txt  ReadMe.txt  build.sh  demo.cpp  output_log.cpp
static_build_demo/build_local_mac/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
static_build_demo/build_local_mac/share/man/man1/: ffmpeg.1  ffplay-all.1  ffprobe-all.1  myffplay-all.1
